--- a/NumPy_Assignment1.ipynb
+++ b/NumPy_Assignment1.ipynb
@@ -20,12 +20,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "3307454f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 1. 1.]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "x = np.ones(3)  \n",
+    "print(x)"
    ]
   },
   {
@@ -38,12 +47,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "9550b063",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0.]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "y = np.zeros(3)  \n",
+    "print(y)"
    ]
   },
   {
@@ -56,12 +74,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "71070d1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 1. 1.]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "result = x + y\n",
+    "print(result)"
    ]
   },
   {
@@ -74,12 +101,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "32627c83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimension: 1\n",
+      "Shape: (4,)\n",
+      "Size: 4\n",
+      "Type: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "print(\"Dimension:\", x.ndim)\n",
+    "print(\"Shape:\", x.shape)\n",
+    "print(\"Size:\", x.size)\n",
+    "print(\"Type:\", x.dtype)"
    ]
   },
   {
@@ -98,12 +139,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "b9c7bbb0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 12]\n",
+      " [13 14]\n",
+      " [15 16]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "w = np.array([[11, 12],\n",
+    "              [13, 14],\n",
+    "              [15, 16]])\n",
+    "\n",
+    "print(w)\n"
    ]
   },
   {
@@ -116,12 +171,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "cee8aba0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "z = np.array([1,2,3])\n",
+    "\n",
+    "print(z)"
    ]
   },
   {
@@ -134,12 +199,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "d218f892",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1 11 12]\n",
+      " [ 2 13 14]\n",
+      " [ 3 15 16]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "newArray = np.hstack((z.reshape(-1, 1), w))\n",
+    "\n",
+    "print(newArray)"
    ]
   },
   {
@@ -152,12 +229,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "abbed923",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 11 12 \n",
+      "2 13 14 \n",
+      "3 15 16 \n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "for row in newArray:\n",
+    "    for element in row:\n",
+    "        print(element, end=' ')  \n",
+    "    print()"
    ]
   },
   {
@@ -170,12 +260,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "12e3f0db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[16 15  3]\n",
+      " [14 13  2]\n",
+      " [12 11  1]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "reversedArray = np.flip(newArray, axis=None)\n",
+    "\n",
+    "print(reversedArray)"
    ]
   },
   {
@@ -188,12 +290,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "aea004df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0 10 11]\n",
+      " [ 1 12 13]\n",
+      " [ 2 14 15]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "newArray -= 1\n",
+    "\n",
+    "print(newArray)"
    ]
   },
   {
@@ -206,12 +320,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "4ea08613",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "15\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "smallest_value = np.min(newArray)\n",
+    "largest_value = np.max(newArray)\n",
+    "\n",
+    "print(smallest_value)\n",
+    "print(largest_value)"
    ]
   },
   {
@@ -224,12 +351,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "73e3b5a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0 10 11]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "print(newArray[0])\n"
    ]
   },
   {
@@ -242,12 +377,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "7ad660b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number equal to 12: 12\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "for row in newArray:\n",
+    "    for element in row:\n",
+    "        if element == 12:\n",
+    "            print(\"Number equal to 12:\", element)"
    ]
   },
   {
@@ -260,12 +406,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "31fb5fd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number equal to 0 or 13: 0\n",
+      "Number equal to 0 or 13: 13\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "for row in newArray:\n",
+    "    for element in row:\n",
+    "        if element == 0 or element == 13:\n",
+    "            print(\"Number equal to 0 or 13:\", element)"
    ]
   },
   {
@@ -278,12 +436,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "35f224ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0]\n",
+      " [10]\n",
+      " [11]\n",
+      " [ 1]\n",
+      " [12]\n",
+      " [13]\n",
+      " [ 2]\n",
+      " [14]\n",
+      " [15]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "newArray_reshaped = newArray.reshape(9, 1)\n",
+    "\n",
+    "print(newArray_reshaped)"
    ]
   },
   {
@@ -296,12 +472,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "724d51d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0 10 11]\n",
+      " [ 1 12 13]\n",
+      " [ 2 14 15]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "newArray_reshaped = newArray.reshape(3, 3)\n",
+    "\n",
+    "print(newArray_reshaped)"
    ]
   },
   {
@@ -329,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
