--- a/NumPy_Assignment2.ipynb
+++ b/NumPy_Assignment2.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "import numpy as np\n"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "id": "b6991a89",
    "metadata": {},
    "source": [
-    "# Q2: Generate a sequence of 15 floats using linspace() function"
+    "# Q2: Generate a sequence of 15 floats using linspace() function\n"
    ]
   },
   {
@@ -31,9 +31,23 @@
    "execution_count": 2,
    "id": "43bf04a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.07142857 0.14285714 0.21428571 0.28571429 0.35714286\n",
+      " 0.42857143 0.5        0.57142857 0.64285714 0.71428571 0.78571429\n",
+      " 0.85714286 0.92857143 1.        ]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "import numpy as np\n",
+    "\n",
+    "sequence = np.linspace(0, 1, 15)\n",
+    "\n",
+    "print(sequence)"
    ]
   },
   {
@@ -57,9 +71,29 @@
    "execution_count": 3,
    "id": "c1c3f9dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1.1  2.1  3.1]\n",
+      "  [ 4.1  5.1  6.1]]\n",
+      "\n",
+      " [[ 7.1  8.1  9.1]\n",
+      "  [10.1 11.1 12.1]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "array_3d = np.array([\n",
+    "    [[1.1, 2.1, 3.1],\n",
+    "     [4.1, 5.1, 6.1]],\n",
+    "    \n",
+    "    [[7.1, 8.1, 9.1],\n",
+    "     [10.1, 11.1, 12.1]]\n",
+    "])\n",
+    "\n",
+    "print(array_3d)"
    ]
   },
   {
@@ -81,9 +115,37 @@
    "execution_count": 4,
    "id": "6e90d6a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array's type: <class 'numpy.ndarray'>\n",
+      "Array's elements datatype: float64\n",
+      "Array's shape: (2, 2, 3)\n",
+      "Array's size: 12\n",
+      "Array's dimension: 3\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "array_3d = np.array([\n",
+    "    [[1.1, 2.1, 3.1],\n",
+    "     [4.1, 5.1, 6.1]],\n",
+    "    \n",
+    "    [[7.1, 8.1, 9.1],\n",
+    "     [10.1, 11.1, 12.1]]\n",
+    "])\n",
+    "\n",
+    "print(\"Array's type:\", type(array_3d))\n",
+    "\n",
+    "print(\"Array's elements datatype:\", array_3d.dtype)\n",
+    "\n",
+    "print(\"Array's shape:\", array_3d.shape)\n",
+    "\n",
+    "print(\"Array's size:\", array_3d.size)\n",
+    "\n",
+    "print(\"Array's dimension:\", array_3d.ndim)"
    ]
   },
   {
@@ -102,9 +164,29 @@
    "execution_count": 5,
    "id": "e9f5c88c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New array's dimension: 4\n",
+      "New array's shape: (1, 2, 2, 3)\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "array_3d = np.array([\n",
+    "    [[1.1, 2.1, 3.1],\n",
+    "     [4.1, 5.1, 6.1]],\n",
+    "    \n",
+    "    [[7.1, 8.1, 9.1],\n",
+    "     [10.1, 11.1, 12.1]]\n",
+    "])\n",
+    "\n",
+    "array_4d = array_3d.reshape(1, 2, 2, 3)\n",
+    "\n",
+    "print(\"New array's dimension:\", array_4d.ndim)\n",
+    "print(\"New array's shape:\", array_4d.shape)"
    ]
   },
   {
@@ -124,9 +206,28 @@
    "execution_count": 6,
    "id": "8135b045",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[ 1  2  3]\n",
+      "   [ 4  5  6]]\n",
+      "\n",
+      "  [[ 7  8  9]\n",
+      "   [10 11 12]]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "array_4d = np.array([[[[ 1.1,  2.1,  3.1],\n",
+    "                        [ 4.1,  5.1,  6.1]],\n",
+    "                       [[ 7.1,  8.1,  9.1],\n",
+    "                        [10.1, 11.1, 12.1]]]])\n",
+    "\n",
+    "array_int = array_4d.astype(int)\n",
+    "\n",
+    "print(array_int)"
    ]
   },
   {
@@ -142,12 +243,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a0d58d15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 11 12 "
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "array_int = np.array([[[[ 1,  2,  3],\n",
+    "                        [ 4,  5,  6]],\n",
+    "                       [[ 7,  8,  9],\n",
+    "                        [10, 11, 12]]]])\n",
+    "\n",
+    "for x in np.nditer(array_int):\n",
+    "    print(x, end=' ')"
    ]
   },
   {
@@ -161,12 +276,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "6e12e2d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "array_int = np.array([[[[ 1,  2,  3],\n",
+    "                        [ 4,  5,  6]],\n",
+    "                       [[ 7,  8,  9],\n",
+    "                        [10, 11, 12]]]])\n",
+    "\n",
+    "number_8 = array_int[0, 1, 0, 1]\n",
+    "print(number_8)"
    ]
   },
   {
@@ -180,12 +309,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "c3218bcb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "array_int = np.array([[[[ 1,  2,  3],\n",
+    "                        [ 4,  5,  6]],\n",
+    "                       [[ 7,  8,  9],\n",
+    "                        [10, 11, 12]]]])\n",
+    "\n",
+    "\n",
+    "number_5 = array_int[0, 0, 1, 1]\n",
+    "number_6 = array_int[0, 0, 1, 2]\n",
+    "\n",
+    "print(number_5)\n",
+    "print(number_6)"
    ]
   },
   {
@@ -203,12 +351,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "ddaf0146",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([0], dtype=int64), array([1], dtype=int64), array([0], dtype=int64), array([1], dtype=int64))\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "array_int = np.array([[[[ 1,  2,  3],\n",
+    "                        [ 4,  5,  6]],\n",
+    "                       [[ 7,  8,  9],\n",
+    "                        [10, 11, 12]]]])\n",
+    "\n",
+    "indexes  = np.where(array_int == 8)\n",
+    "\n",
+    "print(indexes)"
    ]
   },
   {
@@ -231,12 +394,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "d9b632bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2]\n",
+      "  [ 3  4]\n",
+      "  [ 5  6]]\n",
+      "\n",
+      " [[ 7  8]\n",
+      "  [ 9 10]\n",
+      "  [11 12]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "array_int = np.array([[[[ 1,  2,  3],\n",
+    "                        [ 4,  5,  6]],\n",
+    "                       [[ 7,  8,  9],\n",
+    "                        [10, 11, 12]]]])\n",
+    "\n",
+    "reshaped_array = array_int.reshape(2, 3, 2)\n",
+    "\n",
+    "print(reshaped_array)"
    ]
   },
   {
@@ -252,12 +436,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "d6acdeaf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A' 'B']\n",
+      " ['E' 'F']\n",
+      " ['C' 'D']\n",
+      " ['G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "arr1 = np.array([['A', 'B'], ['E', 'F']])\n",
+    "arr2 = np.array([['C', 'D'], ['G', 'H']])\n",
+    "\n",
+    "joined_array = np.concatenate((arr1, arr2))\n",
+    "\n",
+    "print(joined_array)"
    ]
   },
   {
@@ -275,7 +475,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "\n",
+    "arr1 = np.array([['A', 'B'], ['E', 'F']])\n",
+    "arr2 = np.array([['C', 'D'], ['G', 'H']])\n",
+    "\n",
+    "joined_array = np.concatenate((arr1, arr2), axis=1)\n",
+    "\n",
+    "print(joined_array)"
    ]
   },
   {
@@ -289,12 +495,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "7f7f5e49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([['A'],\n",
+      "       ['E'],\n",
+      "       ['C'],\n",
+      "       ['G']], dtype='<U1'), array([['B'],\n",
+      "       ['F'],\n",
+      "       ['D'],\n",
+      "       ['H']], dtype='<U1')]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "joined_array = np.array([['A', 'B'],\n",
+    "                          ['E', 'F'],\n",
+    "                          ['C', 'D'],\n",
+    "                          ['G', 'H']])\n",
+    "\n",
+    "split_arrays = np.split(joined_array, 2, axis=1)\n",
+    "\n",
+    "print(split_arrays)"
    ]
   }
  ],
@@ -314,7 +541,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
