--- a/NumPy_Assignment1.ipynb
+++ b/NumPy_Assignment1.ipynb
@@ -20,12 +20,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "3307454f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "x = np.ones(array_size)\n",
+    "print (x)"
    ]
   },
   {
@@ -38,12 +49,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "9550b063",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "y = np.zeros(array_size)\n",
+    "print (y)"
    ]
   },
   {
@@ -56,12 +78,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "71070d1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "x = np.ones(array_size)\n",
+    "\n",
+    "y = np.zeros(array_size)\n",
+    "result = x + y\n",
+    "print(result)"
    ]
   },
   {
@@ -74,12 +110,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "32627c83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimension of x array: 1\n",
+      "Shape of x array: (10,)\n",
+      "Size of x array: 10\n",
+      "Data type of x array: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "\n",
+    "x = np.ones(array_size)\n",
+    "print(\"Dimension of x array:\", x.ndim)\n",
+    "print(\"Shape of x array:\", x.shape)\n",
+    "print(\"Size of x array:\", x.size)\n",
+    "print(\"Data type of x array:\", x.dtype)\n"
    ]
   },
   {
@@ -98,12 +152,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "b9c7bbb0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 12]\n",
+      " [13 14]\n",
+      " [15 16]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "\n",
+    "w = np.array([[11, 12], [13, 14], [15, 16]])\n",
+    "print(w)"
    ]
   },
   {
@@ -116,12 +184,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "cee8aba0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "\n",
+    "z = np.array([1, 2, 3])\n",
+    "print(z)"
    ]
   },
   {
@@ -134,12 +214,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d218f892",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1 11 12]\n",
+      " [ 2 13 14]\n",
+      " [ 3 15 16]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "\n",
+    "z = np.array([1, 2, 3])\n",
+    "w = np.array([[11, 12],\n",
+    "              [13, 14],\n",
+    "              [15, 16]])\n",
+    "\n",
+    "newArray = np.hstack((z[:, np.newaxis], w))\n",
+    "\n",
+    "print(newArray)\n",
+    "\n"
    ]
   },
   {
@@ -152,12 +253,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "abbed923",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 11 12 \n",
+      "2 13 14 \n",
+      "3 15 16 \n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "\n",
+    "z = np.array([1, 2, 3])\n",
+    "w = np.array([[11, 12],\n",
+    "              [13, 14],\n",
+    "              [15, 16]])\n",
+    "\n",
+    "newArray = np.hstack((z[:, np.newaxis], w))\n",
+    "\n",
+    "for row in newArray:\n",
+    "    for element in row:\n",
+    "        print(element, end=' ')\n",
+    "    print()\n"
    ]
   },
   {
@@ -170,12 +294,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "12e3f0db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[16 15  3]\n",
+      " [14 13  2]\n",
+      " [12 11  1]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "\n",
+    "z = np.array([1, 2, 3])\n",
+    "w = np.array([[11, 12],\n",
+    "              [13, 14],\n",
+    "              [15, 16]])\n",
+    "\n",
+    "newArray = np.hstack((z[:, np.newaxis], w))\n",
+    "\n",
+    "reversedArray = np.flip(newArray, axis=0)\n",
+    "reversedArray = np.flip(reversedArray, axis=1)\n",
+    "\n",
+    "print(reversedArray)\n"
    ]
   },
   {
@@ -188,12 +335,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "aea004df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0 10 11]\n",
+      " [ 1 12 13]\n",
+      " [ 2 14 15]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "\n",
+    "z = np.array([1, 2, 3])\n",
+    "w = np.array([[11, 12],\n",
+    "              [13, 14],\n",
+    "              [15, 16]])\n",
+    "\n",
+    "newArray = np.hstack((z[:, np.newaxis], w))\n",
+    "\n",
+    "newArray -= 1\n",
+    "\n",
+    "print(newArray)\n"
    ]
   },
   {
@@ -206,12 +375,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4ea08613",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Smallest : 1\n",
+      "Largest : 16\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "\n",
+    "z = np.array([1, 2, 3])\n",
+    "w = np.array([[11, 12],\n",
+    "              [13, 14],\n",
+    "              [15, 16]])\n",
+    "\n",
+    "newArray = np.hstack((z[:, np.newaxis], w))\n",
+    "\n",
+    "smallest = np.min(newArray)\n",
+    "largest = np.max(newArray)\n",
+    "\n",
+    "print(\"Smallest :\", smallest)\n",
+    "print(\"Largest :\", largest)\n"
    ]
   },
   {
@@ -224,12 +416,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "73e3b5a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First row of newArray: [ 1 11 12]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "\n",
+    "z = np.array([1, 2, 3])\n",
+    "w = np.array([[11, 12],\n",
+    "              [13, 14],\n",
+    "              [15, 16]])\n",
+    "\n",
+    "newArray = np.hstack((z[:, np.newaxis], w))\n",
+    "\n",
+    "first_row = newArray[0]\n",
+    "\n",
+    "print(\"First row of newArray:\", first_row)\n"
    ]
   },
   {
@@ -242,12 +454,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7ad660b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number equals 12: 12\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "\n",
+    "z = np.array([1, 2, 3])\n",
+    "w = np.array([[11, 12],\n",
+    "              [13, 14],\n",
+    "              [15, 16]])\n",
+    "\n",
+    "newArray = np.hstack((z[:, np.newaxis], w))\n",
+    "\n",
+    "number_12_index = np.where(newArray == 12)\n",
+    "number_12 = newArray[number_12_index]\n",
+    "\n",
+    "print(\"Number equals 12:\", number_12[0])\n"
    ]
   },
   {
@@ -260,12 +493,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "31fb5fd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numbers equal to 0: []\n",
+      "Numbers equal to 13: [13]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "# write your code here ^_^\n",
+    "\n",
+    "\n",
+    "z = np.array([1, 2, 3])\n",
+    "w = np.array([[11, 12],\n",
+    "              [13, 14],\n",
+    "              [15, 16]])\n",
+    "\n",
+    "newArray = np.hstack((z[:, np.newaxis], w))\n",
+    "\n",
+    "indices_0 = np.where(newArray == 0)\n",
+    "indices_13 = np.where(newArray == 13)\n",
+    "\n",
+    "numbers_0 = newArray[indices_0]\n",
+    "numbers_13 = newArray[indices_13]\n",
+    "\n",
+    "print(\"Numbers equal to 0:\", numbers_0)\n",
+    "print(\"Numbers equal to 13:\", numbers_13)\n"
    ]
   },
   {
@@ -278,12 +538,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "35f224ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1]\n",
+      " [11]\n",
+      " [12]\n",
+      " [ 2]\n",
+      " [13]\n",
+      " [14]\n",
+      " [ 3]\n",
+      " [15]\n",
+      " [16]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "\n",
+    "z = np.array([1, 2, 3])\n",
+    "w = np.array([[11, 12],\n",
+    "              [13, 14],\n",
+    "              [15, 16]])\n",
+    "\n",
+    "newArray = np.hstack((z[:, np.newaxis], w))\n",
+    "\n",
+    "newArray_reshaped = newArray.reshape((9, 1))\n",
+    "\n",
+    "print(newArray_reshaped)\n"
    ]
   },
   {
@@ -291,17 +579,39 @@
    "id": "e6d104c5",
    "metadata": {},
    "source": [
-    "## Q#16: Change the shape of \"newArray\" to (3,2)."
+    "## Q#16: Change the shape of \"newArray\" to (3,3)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "724d51d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1 11 12]\n",
+      " [ 2 13 14]\n",
+      " [ 3 15 16]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "\n",
+    "z = np.array([1, 2, 3])\n",
+    "w = np.array([[11, 12],\n",
+    "              [13, 14],\n",
+    "              [15, 16]])\n",
+    "\n",
+    "newArray = np.hstack((z[:, np.newaxis], w))\n",
+    "\n",
+    "newArray_reshaped = newArray.reshape((3, 3))\n",
+    "\n",
+    "print(newArray_reshaped)\n"
    ]
   },
   {
@@ -329,7 +639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
