--- a/NumPy_Assignment2.ipynb
+++ b/NumPy_Assignment2.ipynb
@@ -15,7 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "import numpy as np"
    ]
   },
   {
@@ -31,9 +32,21 @@
    "execution_count": 2,
    "id": "43bf04a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.07142857 0.14285714 0.21428571 0.28571429 0.35714286\n",
+      " 0.42857143 0.5        0.57142857 0.64285714 0.71428571 0.78571429\n",
+      " 0.85714286 0.92857143 1.        ]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "print(np.linspace(0.0, 1.0, 15))"
    ]
   },
   {
@@ -54,12 +67,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c1c3f9dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.4  2.6  3.3]\n",
+      " [ 4.1  5.8  6.4]\n",
+      " [ 7.1  8.4  9.1]\n",
+      " [10.1 11.2 12.3]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "array1 = np.array([1.1, 2.1, 3.1])\n",
+    "array2 = np.array([4.1, 5.1, 6.1])\n",
+    "array3 = np.array([7.1, 8.1, 9.1])\n",
+    "array4 = np.array([10.1, 11.1, 12.1])\n",
+    "\n",
+    "data_3d = np.stack((array1, array2, array3, array4), axis=0)\n",
+    "\n",
+    "print(data_3d)\n"
    ]
   },
   {
@@ -78,12 +111,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6e90d6a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array type: <class 'numpy.ndarray'>\n",
+      "Elements datatype: float64\n",
+      "Array shape: (4, 3)\n",
+      "Array size: 12\n",
+      "Array dimension: 2\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "print(f\"Array type: {type(data_3d)}\")\n",
+    "print(f\"Elements datatype: {data_3d.dtype}\")\n",
+    "print(f\"Array shape: {data_3d.shape}\")\n",
+    "print(f\"Array size: {data_3d.size}\")\n",
+    "print(f\"Array dimension: {data_3d.ndim}\")\n"
    ]
   },
   {
@@ -99,12 +150,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "e9f5c88c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New array dimension (Approach 1): 3\n",
+      "New array shape (Approach 1): (1, 4, 3)\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "data_4d_1 = np.expand_dims(data_3d, axis=0) \n",
+    "\n",
+    "print(f\"New array dimension (Approach 1): {data_4d_1.ndim}\")\n",
+    "print(f\"New array shape (Approach 1): {data_4d_1.shape}\")\n"
    ]
   },
   {
@@ -121,12 +185,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "8135b045",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New array (integer elements):\n",
+      "[[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8  9]\n",
+      " [10 11 12]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "\n",
+    "data_int = data_3d.astype(int) \n",
+    "\n",
+    "print(\"New array (integer elements):\")\n",
+    "print(data_int)\n"
    ]
   },
   {
@@ -142,12 +224,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "a0d58d15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elements using nditer:\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "\n",
+    "print(\"Elements using nditer:\")\n",
+    "for element in np.nditer(data_int):\n",
+    "  print(element)\n"
    ]
   },
   {
@@ -161,12 +268,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "6e12e2d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number 8 exists in the array (but specific location not retrieved with slicing)\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "element_exists = 8 in data_int\n",
+    "\n",
+    "if element_exists:\n",
+    "  print(\"Number 8 exists in the array (but specific location not retrieved with slicing)\")\n",
+    "else:\n",
+    "  print(\"Number 8 not found in the array\")\n"
    ]
   },
   {
@@ -180,12 +302,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "c3218bcb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number 5: (array([4, 5, 6]), [1])\n",
+      "Number 6: (array([4, 5, 6]), [2])\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "number_5 = data_int[1],[1]  \n",
+    "number_6 = data_int[1],[2] \n",
+    "\n",
+    "print(\"Number 5:\", number_5)\n",
+    "print(\"Number 6:\", number_6)\n"
    ]
   },
   {
@@ -203,12 +340,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "ddaf0146",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number 8 found at indices: (array([2], dtype=int64), array([1], dtype=int64))\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "indices = np.where(data_int == 8)\n",
+    "\n",
+    "if indices[0].size > 0:\n",
+    "\n",
+    "  print(\"Number 8 found at indices:\", indices)\n",
+    "else:\n",
+    "  print(\"Number 8 not found in the array\")\n"
    ]
   },
   {
@@ -231,12 +384,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "d9b632bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reshaped array:\n",
+      "[[[ 1  2]\n",
+      "  [ 3  4]]\n",
+      "\n",
+      " [[ 5  6]\n",
+      "  [ 7  8]]\n",
+      "\n",
+      " [[ 9 10]\n",
+      "  [11 12]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "data_reshaped = data_int.reshape(3, 2, 2)\n",
+    "\n",
+    "print(\"Reshaped array:\")\n",
+    "print(data_reshaped)\n"
    ]
   },
   {
@@ -252,12 +426,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "id": "d6acdeaf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A' 'B']\n",
+      " ['E' 'F']\n",
+      " ['C' 'D']\n",
+      " ['G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "arr1 = np.array([['A', 'B'], ['E', 'F']])\n",
+    "arr2 = np.array([['C', 'D'], ['G', 'H']])\n",
+    "\n",
+    "joined_array = np.concatenate((arr1, arr2))\n",
+    "\n",
+    "print(joined_array)\n"
    ]
   },
   {
@@ -270,12 +462,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "b849658c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A' 'B' 'C' 'D']\n",
+      " ['E' 'F' 'G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "arr1 = np.array([['A', 'B'], ['E', 'F']])\n",
+    "arr2 = np.array([['C', 'D'], ['G', 'H']])\n",
+    "\n",
+    "joined_array = np.concatenate((arr1, arr2), axis=1)\n",
+    "\n",
+    "print(joined_array)"
    ]
   },
   {
@@ -289,12 +496,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "id": "7f7f5e49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Split array 1: [['A' 'B']\n",
+      " ['E' 'F']]\n",
+      "Split array 2: [['C' 'D']\n",
+      " ['G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "arr1 = np.array([['A', 'B'], ['E', 'F']])\n",
+    "arr2 = np.array([['C', 'D'], ['G', 'H']])\n",
+    "\n",
+    "joined_array = np.concatenate((arr1, arr2), axis=1)\n",
+    "\n",
+    "split_arr1 = joined_array[:, :2]  # First two columns\n",
+    "split_arr2 = joined_array[:, 2:]  # Last two columns\n",
+    "\n",
+    "print(\"Split array 1:\", split_arr1)\n",
+    "print(\"Split array 2:\", split_arr2)"
    ]
   }
  ],
@@ -314,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
