--- a/NumPy_Assignment1.ipynb
+++ b/NumPy_Assignment1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "212fd1ba",
    "metadata": {},
    "outputs": [],
@@ -20,12 +20,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3307454f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "shape = (3, 4)\n",
+    "x = np.ones(shape)\n",
+    "print(x)"
    ]
   },
   {
@@ -38,12 +50,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9550b063",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "y = np.zeros(shape)\n",
+    "print(y)"
    ]
   },
   {
@@ -56,12 +79,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "71070d1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "sum_array = x + y\n",
+    "print(sum_array)"
    ]
   },
   {
@@ -74,12 +108,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "32627c83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimension: 2\n",
+      "Shape: (3, 4)\n",
+      "Size: 12\n",
+      "Type: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "print(\"Dimension:\", x.ndim)\n",
+    "print(\"Shape:\", x.shape)\n",
+    "print(\"Size:\", x.size)\n",
+    "print(\"Type:\", x.dtype)\n"
    ]
   },
   {
@@ -98,12 +146,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b9c7bbb0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 12]\n",
+      " [13 14]\n",
+      " [15 16]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "w = np.array([[11, 12], [13, 14], [15, 16]])\n",
+    "print(w)"
    ]
   },
   {
@@ -116,12 +175,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "cee8aba0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "z = np.arange(1, 4)\n",
+    "print(z)"
    ]
   },
   {
@@ -134,12 +202,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d218f892",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1 11 12]\n",
+      " [ 2 13 14]\n",
+      " [ 3 15 16]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "newArray = np.hstack((z.reshape(-1, 1), w))\n",
+    "print(newArray)"
    ]
   },
   {
@@ -152,12 +231,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "abbed923",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "11\n",
+      "12\n",
+      "2\n",
+      "13\n",
+      "14\n",
+      "3\n",
+      "15\n",
+      "16\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "for element in newArray.flat:\n",
+    "    print(element)"
    ]
   },
   {
@@ -170,12 +266,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "12e3f0db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[16 15  3]\n",
+      " [14 13  2]\n",
+      " [12 11  1]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "reversed_array = newArray[::-1, ::-1]\n",
+    "print(reversed_array)"
    ]
   },
   {
@@ -188,12 +295,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "aea004df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0 10 11]\n",
+      " [ 1 12 13]\n",
+      " [ 2 14 15]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "decremented_array = newArray - 1\n",
+    "print(decremented_array)"
    ]
   },
   {
@@ -206,12 +324,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "4ea08613",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Smallest: 1 Biggest: 16\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "smallest = np.amin(newArray)\n",
+    "biggest = np.amax(newArray)\n",
+    "print(\"Smallest:\", smallest, \"Biggest:\", biggest)"
    ]
   },
   {
@@ -224,12 +352,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "73e3b5a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1 11 12]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "first_row = newArray[0, :]\n",
+    "print(first_row)"
    ]
   },
   {
@@ -242,12 +379,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "7ad660b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "number_12 = newArray[1, 0]\n",
+    "print(number_12)"
    ]
   },
   {
@@ -260,12 +406,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "31fb5fd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number 0: 11\n",
+      "Number 13: 13\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "print(\"Number 0:\", newArray[0, 1])\n",
+    "print(\"Number 13:\", newArray[1, 1])"
    ]
   },
   {
@@ -278,12 +434,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "35f224ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1]\n",
+      " [11]\n",
+      " [12]\n",
+      " [ 2]\n",
+      " [13]\n",
+      " [14]\n",
+      " [ 3]\n",
+      " [15]\n",
+      " [16]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "reshaped_1 = newArray.reshape(9, 1)\n",
+    "print(reshaped_1)"
    ]
   },
   {
@@ -296,12 +469,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "724d51d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1 11 12]\n",
+      " [ 2 13 14]\n",
+      " [ 3 15 16]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "new_shape = (3, 3)\n",
+    "newArray_reshaped = newArray.reshape(new_shape)\n",
+    "print(newArray_reshaped)"
    ]
   },
   {
@@ -329,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
