--- a/NumPy_Assignment2.ipynb
+++ b/NumPy_Assignment2.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "import numpy as np"
    ]
   },
   {
@@ -31,9 +31,20 @@
    "execution_count": 2,
    "id": "43bf04a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.         1.28571429 1.57142857 1.85714286 2.14285714 2.42857143\n",
+      " 2.71428571 3.         3.28571429 3.57142857 3.85714286 4.14285714\n",
+      " 4.42857143 4.71428571 5.        ]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "sequence = np.linspace(1.0, 5.0, 15)\n",
+    "print(sequence)"
    ]
   },
   {
@@ -57,9 +68,24 @@
    "execution_count": 3,
    "id": "c1c3f9dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1.1  2.1  3.1]\n",
+      "  [ 4.1  5.1  6.1]]\n",
+      "\n",
+      " [[ 7.1  8.1  9.1]\n",
+      "  [10.1 11.1 12.1]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "arr1 = np.array([[1.1, 2.1, 3.1], [4.1, 5.1, 6.1]])\n",
+    "arr2 = np.array([[7.1, 8.1, 9.1], [10.1, 11.1, 12.1]])\n",
+    "three_d_array = np.array([arr1, arr2])\n",
+    "print(three_d_array)"
    ]
   },
   {
@@ -81,9 +107,25 @@
    "execution_count": 4,
    "id": "6e90d6a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array type: float64\n",
+      "Elements datatype: float64\n",
+      "Array shape: (2, 2, 3)\n",
+      "Array size: 12\n",
+      "Array dimension: 3\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "print(\"Array type:\", three_d_array.dtype)\n",
+    "print(\"Elements datatype:\", three_d_array[0, 0, 0].dtype)\n",
+    "print(\"Array shape:\", three_d_array.shape)\n",
+    "print(\"Array size:\", three_d_array.size)\n",
+    "print(\"Array dimension:\", three_d_array.ndim)"
    ]
   },
   {
@@ -102,9 +144,20 @@
    "execution_count": 5,
    "id": "e9f5c88c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New array dimension: 4\n",
+      "New array shape: (1, 2, 2, 3)\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "four_d_array = three_d_array.reshape((1, 2, 2, 3))\n",
+    "print(\"New array dimension:\", four_d_array.ndim)\n",
+    "print(\"New array shape:\", four_d_array.shape)"
    ]
   },
   {
@@ -124,9 +177,22 @@
    "execution_count": 6,
    "id": "8135b045",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[ 1  2  3]\n",
+      "   [ 4  5  6]]\n",
+      "\n",
+      "  [[ 7  8  9]\n",
+      "   [10 11 12]]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "integer_array = four_d_array.astype(int)\n",
+    "print(integer_array)"
    ]
   },
   {
@@ -145,9 +211,29 @@
    "execution_count": 7,
    "id": "a0d58d15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "for element in np.nditer(integer_array):\n",
+    "    print(element)"
    ]
   },
   {
@@ -164,9 +250,18 @@
    "execution_count": 8,
    "id": "6e12e2d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "number_8 = integer_array[0, 1, 0, 1]\n",
+    "print(number_8)"
    ]
   },
   {
@@ -183,9 +278,19 @@
    "execution_count": 9,
    "id": "c3218bcb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[2 3]\n",
+      "  [8 9]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "numbers_5_and_6 = integer_array[:, :, 0, 1:3]\n",
+    "print(numbers_5_and_6)"
    ]
   },
   {
@@ -206,9 +311,18 @@
    "execution_count": 10,
    "id": "ddaf0146",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([0], dtype=int64), array([1], dtype=int64), array([0], dtype=int64), array([1], dtype=int64))\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "indices = np.where(integer_array == 8)\n",
+    "print(indices)"
    ]
   },
   {
@@ -231,12 +345,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "d9b632bd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "arr1 = np.array([['A', 'B'], ['E', 'F']])\n",
+    "arr2 = np.array([['C', 'D'], ['G', 'H']])"
    ]
   },
   {
@@ -252,12 +367,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d6acdeaf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A' 'B']\n",
+      " ['E' 'F']\n",
+      " ['C' 'D']\n",
+      " ['G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "joined_array = np.concatenate((arr1, arr2))\n",
+    "print(joined_array)"
    ]
   },
   {
@@ -270,12 +397,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "b849658c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A' 'B' 'C' 'D']\n",
+      " ['E' 'F' 'G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "joined_array_rows = np.concatenate((arr1, arr2), axis=1)\n",
+    "print(joined_array_rows)"
    ]
   },
   {
@@ -289,12 +426,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "7f7f5e49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([['A', 'B'],\n",
+      "       ['E', 'F']], dtype='<U1'), array([['C', 'D'],\n",
+      "       ['G', 'H']], dtype='<U1')]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "split_arrays = np.split(joined_array_rows, 2, axis=1)\n",
+    "print(split_arrays)"
    ]
   }
  ],
@@ -314,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
