--- a/NumPy_Assignment1.ipynb
+++ b/NumPy_Assignment1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "212fd1ba",
    "metadata": {},
    "outputs": [],
@@ -20,12 +20,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3307454f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1]\n",
+      "[1. 1. 1.]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# Array with 3 elements, all equal to 1\n",
+    "x1 = np.array([1,1,1])\n",
+    "print(x1)\n",
+    "\n",
+    "# anther way\n",
+    "x2 =np.ones(3)\n",
+    "print(x2)\n"
    ]
   },
   {
@@ -38,12 +53,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "9550b063",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0.]\n",
+      "[0 0 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# Array with  elements, all equal to 0\n",
+    "y1 = np.zeros(3) \n",
+    "print(y1)\n",
+    "\n",
+    "#anther way\n",
+    "y2 = np.array([0,0,0])\n",
+    "print(y2)"
    ]
   },
   {
@@ -56,12 +86,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "71070d1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 1. 1.]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "Add_Array = x1 + y1  \n",
+    "print(Add_Array)"
    ]
   },
   {
@@ -74,12 +113,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "32627c83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimension: 1\n",
+      "Shape: (3,)\n",
+      "Size: 3\n",
+      "Type: int32\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "print(\"Dimension:\", x1.ndim)\n",
+    "print(\"Shape:\", x1.shape)\n",
+    "print(\"Size:\", x1.size)\n",
+    "print(\"Type:\", x1.dtype)"
    ]
   },
   {
@@ -98,12 +151,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "b9c7bbb0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 12]\n",
+      " [13 14]\n",
+      " [15 16]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "w = np.array([[11, 12 ],\n",
+    "              [13, 14 ], \n",
+    "              [15, 16]])\n",
+    "\n",
+    "print(w)"
    ]
   },
   {
@@ -116,12 +183,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "cee8aba0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "z = np.arange(1, 4)\n",
+    "\n",
+    "print(z)"
    ]
   },
   {
@@ -134,12 +211,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "d218f892",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New_Array1\n",
+      "[[ 1 11 12]\n",
+      " [ 2 13 14]\n",
+      " [ 3 15 16]]\n",
+      "New_Array2\n",
+      "[[ 1 11 12]\n",
+      " [ 2 13 14]\n",
+      " [ 3 15 16]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "\n",
+    "New_Array1 = np.hstack((z.reshape(-1, 1), w))\n",
+    "\n",
+    "#anther way\n",
+    "z_reshaped = z[:, np.newaxis]\n",
+    "New_Array2  = np.concatenate((z_reshaped, w), axis=1)\n",
+    "\n",
+    "print(\"New_Array1\")\n",
+    "print(New_Array1)\n",
+    "print(\"New_Array2\")\n",
+    "print(New_Array2)"
    ]
   },
   {
@@ -152,12 +254,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "abbed923",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 11 12 \n",
+      "2 13 14 \n",
+      "3 15 16 \n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "for row in New_Array1:\n",
+    "    for i in row:\n",
+    "        print(i, end=\" \")\n",
+    "    print()  # Print a new line after each row\n"
    ]
   },
   {
@@ -170,12 +285,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "12e3f0db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[16 15  3]\n",
+      " [14 13  2]\n",
+      " [12 11  1]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "New_Array1 = New_Array1[::-1, ::-1]\n",
+    "\n",
+    "print(New_Array1)\n"
    ]
   },
   {
@@ -188,12 +315,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "aea004df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[15 14  2]\n",
+      " [13 12  1]\n",
+      " [11 10  0]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "New_Array1 = New_Array1 - 1\n",
+    "\n",
+    "print(New_Array1)\n"
    ]
   },
   {
@@ -206,12 +345,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "4ea08613",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Smallest value: 0\n",
+      "Largest value: 15\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "smallest_value = np.amin(New_Array1)\n",
+    "largest_value = np.amax(New_Array1)\n",
+    "\n",
+    "print(\"Smallest value:\", smallest_value)\n",
+    "print(\"Largest value:\", largest_value)\n"
    ]
   },
   {
@@ -224,12 +376,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "73e3b5a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15 14  2]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "firstRrow = New_Array1[0]\n",
+    "\n",
+    "print(firstRrow)\n"
    ]
   },
   {
@@ -242,12 +404,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "7ad660b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indices of 12 : (array([1], dtype=int64), array([1], dtype=int64))\n",
+      "Value 12 found at index (1, 1)\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "target_value = 12\n",
+    "\n",
+    "indices = np.where(New_Array1 == target_value)\n",
+    "\n",
+    "print(\"Indices of\", target_value, \":\", indices)\n",
+    "\n",
+    "for idx in zip(indices[0], indices[1]):\n",
+    "    print(\"Value\", target_value, \"found at index\", idx)\n",
+    "\n"
    ]
   },
   {
@@ -260,12 +439,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "31fb5fd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indices of 0 : (array([2], dtype=int64), array([2], dtype=int64))\n",
+      "Value 0 found at index (2, 2)\n",
+      "Indices of 13 : (array([1], dtype=int64), array([0], dtype=int64))\n",
+      "Value 13 found at index (1, 0)\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "targets = [0, 13]\n",
+    "\n",
+    "for target_value in targets:\n",
+    "\n",
+    "    indices = np.where(New_Array1 == target_value)\n",
+    "\n",
+    "    print(\"Indices of\", target_value, \":\", indices)\n",
+    "\n",
+    "    \n",
+    "    for idx in zip(indices[0], indices[1]):\n",
+    "        print(\"Value\", target_value, \"found at index\", idx)\n",
+    "\n"
    ]
   },
   {
@@ -278,12 +479,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "35f224ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[15]\n",
+      " [14]\n",
+      " [ 2]\n",
+      " [13]\n",
+      " [12]\n",
+      " [ 1]\n",
+      " [11]\n",
+      " [10]\n",
+      " [ 0]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "New_Array1 = New_Array1.reshape(9, 1)\n",
+    "\n",
+    "print(New_Array1)\n"
    ]
   },
   {
@@ -296,12 +515,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "724d51d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[15 14  2]\n",
+      " [13 12  1]\n",
+      " [11 10  0]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "New_Array1 = New_Array1.reshape(3, 3)\n",
+    "\n",
+    "print(New_Array1)\n"
    ]
   },
   {
@@ -329,7 +560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
