--- a/NumPy_Assignment2.ipynb
+++ b/NumPy_Assignment2.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "import numpy as np"
    ]
   },
   {
@@ -31,9 +31,20 @@
    "execution_count": 2,
    "id": "43bf04a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.07142857 0.14285714 0.21428571 0.28571429 0.35714286\n",
+      " 0.42857143 0.5        0.57142857 0.64285714 0.71428571 0.78571429\n",
+      " 0.85714286 0.92857143 1.        ]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "sequence = np.linspace(0.0, 1.0, 15)\n",
+    "print(sequence)\n"
    ]
   },
   {
@@ -57,9 +68,32 @@
    "execution_count": 3,
    "id": "c1c3f9dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[[ 1.1  2.1  3.1]]\n",
+      "\n",
+      "   [[ 4.1  5.1  6.1]]]\n",
+      "\n",
+      "\n",
+      "  [[[ 7.1  8.1  9.1]]\n",
+      "\n",
+      "   [[10.1 11.1 12.1]]]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# Define the arrays\n",
+    "arr1 = np.array([[1.1, 2.1, 3.1]])\n",
+    "arr2 = np.array([[4.1, 5.1, 6.1]])\n",
+    "arr3 = np.array([[7.1, 8.1, 9.1]])\n",
+    "arr4 = np.array([[10.1, 11.1, 12.1]])\n",
+    "\n",
+    "array_3d = np.array([[[arr1, arr2], [arr3, arr4]]])\n",
+    "\n",
+    "print(array_3d)\n"
    ]
   },
   {
@@ -81,9 +115,27 @@
    "execution_count": 4,
    "id": "6e90d6a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array's type: <class 'numpy.ndarray'>\n",
+      "Array's elements datatype: float64\n",
+      "Array's shape: (1, 2, 2, 1, 3)\n",
+      "Array's size: 12\n",
+      "Array's dimension: 5\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# Print the requested information\n",
+    "\n",
+    "print(\"Array's type:\", type(array_3d))\n",
+    "print(\"Array's elements datatype:\", array_3d.dtype)\n",
+    "print(\"Array's shape:\", array_3d.shape)\n",
+    "print(\"Array's size:\", array_3d.size)\n",
+    "print(\"Array's dimension:\", array_3d.ndim)\n"
    ]
   },
   {
@@ -102,9 +154,21 @@
    "execution_count": 5,
    "id": "e9f5c88c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New array's dimension: 4\n",
+      "New array's shape: (1, 2, 2, 3)\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "array_4d = array_3d.reshape(1, 2, 2, 3)\n",
+    "\n",
+    "print(\"New array's dimension:\", array_4d.ndim)\n",
+    "print(\"New array's shape:\", array_4d.shape)\n"
    ]
   },
   {
@@ -124,9 +188,24 @@
    "execution_count": 6,
    "id": "8135b045",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[ 1  2  3]\n",
+      "   [ 4  5  6]]\n",
+      "\n",
+      "  [[ 7  8  9]\n",
+      "   [10 11 12]]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "array_int = array_4d.astype(int)\n",
+    "\n",
+    "# Print the new array\n",
+    "print(array_int)\n"
    ]
   },
   {
@@ -145,9 +224,29 @@
    "execution_count": 7,
    "id": "a0d58d15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "for element in np.nditer(array_int):\n",
+    "    print(element)\n"
    ]
   },
   {
@@ -164,9 +263,20 @@
    "execution_count": 8,
    "id": "6e12e2d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number 8: 8\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "number_8 = array_int[0, 1, 0, 1]\n",
+    "\n",
+    "\n",
+    "print(\"Number 8:\", number_8)\n"
    ]
   },
   {
@@ -183,9 +293,24 @@
    "execution_count": 9,
    "id": "c3218bcb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number 5: 5\n",
+      "Number 6: 6\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "\n",
+    "number_5 = array_int[0, 0, 1, 1]\n",
+    "number_6 = array_int[0, 0, 1, 2]\n",
+    "\n",
+    "# Print numbers 5 and 6\n",
+    "print(\"Number 5:\", number_5)\n",
+    "print(\"Number 6:\", number_6)\n"
    ]
   },
   {
@@ -206,9 +331,20 @@
    "execution_count": 10,
    "id": "ddaf0146",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indices of number 8: (array([0], dtype=int64), array([1], dtype=int64), array([0], dtype=int64), array([1], dtype=int64))\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "indices = np.where(array_int == 8)\n",
+    "\n",
+    "\n",
+    "print(\"Indices of number 8:\", indices)\n"
    ]
   },
   {
@@ -231,12 +367,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "d9b632bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2]\n",
+      "  [ 3  4]\n",
+      "  [ 5  6]]\n",
+      "\n",
+      " [[ 7  8]\n",
+      "  [ 9 10]\n",
+      "  [11 12]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "\n",
+    "reshaped_array = array_int.reshape(2, 3, 2)\n",
+    "\n",
+    "print(reshaped_array)\n"
    ]
   },
   {
@@ -252,12 +405,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d6acdeaf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A' 'B']\n",
+      " ['E' 'F']\n",
+      " ['C' 'D']\n",
+      " ['G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "arr1 = np.array([['A', 'B'], ['E', 'F']])\n",
+    "arr2 = np.array([['C', 'D'], ['G', 'H']])\n",
+    "\n",
+    "joined_arrays_1 = np.concatenate((arr1, arr2))\n",
+    "\n",
+    "print(joined_arrays_1)\n"
    ]
   },
   {
@@ -270,12 +439,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "b849658c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A' 'B' 'C' 'D']\n",
+      " ['E' 'F' 'G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "joined_arrays_2 = np.concatenate((arr1, arr2), axis=1)\n",
+    "\n",
+    "print(joined_arrays_2)\n"
    ]
   },
   {
@@ -289,12 +469,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "7f7f5e49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A']\n",
+      " ['E']\n",
+      " ['C']\n",
+      " ['G']]\n",
+      "[['B']\n",
+      " ['F']\n",
+      " ['D']\n",
+      " ['H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "\n",
+    "split_arrays = np.split(joined_arrays_1, 2, axis=1)\n",
+    "\n",
+    "for arr in split_arrays:\n",
+    "    print(arr)\n"
    ]
   }
  ],
@@ -314,7 +513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
